--- a/templates/afegir_comentari.html
+++ b/templates/afegir_comentari.html
@@ -1,3 +1,10 @@
+<!--
+    Pàgina per afegir comentaris a cada pel·lícula. Has d'haver iniciat sessió primer
+-->
+
+<!--
+    Extén del html base
+-->
 {% extends 'base.html' %}
 {% load static %}
 
