--- a/templates/afegir_reserva.html
+++ b/templates/afegir_reserva.html
@@ -1,3 +1,9 @@
+<!--
+    Pàgina per afegir una nova reserva a la base de dades. Només habilitada per l'administrador
+-->
+<!--
+    Extén del html base
+-->
 {% extends 'base.html' %}
 {% load static %}
 
@@ -35,6 +41,5 @@
             <button type="submit" class="btn btn-primary btn-block">Enviar</button>
         </form>
     </div>
-
 
 {% endblock %}
