--- a/templates/afegir_sessio.html
+++ b/templates/afegir_sessio.html
@@ -1,3 +1,9 @@
+<!--
+    Pàgina per afegir una nova sessió a la base de dades. Només habilitada per l'administrador
+-->
+<!--
+    Extén del html base
+-->
 {% extends 'base.html' %}
 {% load static %}
 
