--- a/templates/base.html
+++ b/templates/base.html
@@ -1,3 +1,8 @@
+<!--
+    Pàgina plantilla per fer les altres que hereten d'aquesta. Conté elements com el head perquè no
+    estiguin a tots els htmls
+-->
+
 {% load static %}
 
 <!DOCTYPE html>
@@ -34,7 +39,7 @@
         <div class="collapse navbar-collapse" id="collapsibleNavbar">
             <ul class="navbar-nav">
                 <li class="nav-item">
-                    <a class="nav-link" href="/cartellera">Cartellera</a>
+                    <a class="nav-link" href="/">Cartellera</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="/productes">Per Picar</a>
@@ -57,7 +62,7 @@
             </ul>
             {% endif %}
         </div>
-{#      Si l'usuari ha iniciat sessió, mostrem el seu nom d'usuari i l'enllaç per tancar la sessió#}
+{#      Si l'usuari ha iniciat sessió, mostrem el seu nom d'usuari i l'enllaç per tancar la sessió #}
         {% if request.user.is_authenticated %}
         <span class="nav-link">Hola, {{ request.user }}</span>
         <span><a href="{% url 'logout' %}">Tancar Sessió</a></span>
@@ -71,12 +76,7 @@
 {% endblock %}
 
 <footer>
-    <div class="footer-text">
-        <p class="sitemap"><b>Sitemap</b></p>
-        <li><a href="index.html">Principal</a></li>
-        <li><a href="cartellera.html">Cartellera</a></li>
-        <li><a href="login.html">Iniciar sessió</a></li>
-        <li><a href="registrar.html">Crear compte</a></li>
+    <div class="div-footer">
     </div>
 </footer>
 </body>
