--- a/templates/editar_sessio.html
+++ b/templates/editar_sessio.html
@@ -1,3 +1,10 @@
+<!--
+    Pàgina per editar una sessió. Només habilitada per l'administrador
+-->
+<!--
+    Extén del html base
+-->
+
 {% extends 'base.html' %}
 {% load static %}
 
