--- a/templates/llistat_comentaris.html
+++ b/templates/llistat_comentaris.html
@@ -1,3 +1,10 @@
+<!--
+    Pàgina perquè l'administrador pugui veure i eliminar els comentaris de les pel·lícules.
+-->
+<!--
+    Extén del html base_admin
+-->
+
 {% extends 'base_admin.html' %}
 {% load static %}
 
