--- a/templates/login.html
+++ b/templates/login.html
@@ -1,3 +1,10 @@
+<!--
+    Pàgina per fer login a la web
+-->
+<!--
+    Extén del html base
+-->
+
 {% extends 'base.html' %}
 {% load static %}
 
@@ -7,7 +14,7 @@
 
 {% block content %}
 
-    <div class="global-container">
+    <div class="global-container-login">
         <div class="card login-form">
             <div class="card-body">
                 <h3 class="card-title text-center">Inicia sessió</h3>
