--- a/templates/productes.html
+++ b/templates/productes.html
@@ -1,3 +1,10 @@
+<!--
+    Pàgina que mostra els productes o aperitius de la web. Són informatius, no es poden comprar.
+-->
+<!--
+    Extén del html base
+-->
+
 {% extends 'base.html' %}
 {% load static %}
 
