--- a/templates/afegir_pelicula.html
+++ b/templates/afegir_pelicula.html
@@ -1,3 +1,9 @@
+<!--
+    Pàgina per afegir una nova pel·lícula a la base de dades. Només habilitada per l'administrador
+-->
+<!--
+    Extén del html base
+-->
 {% extends 'base.html' %}
 {% load static %}
 
@@ -51,7 +57,6 @@
                 <div class="form-group col-md-4">
                     <label for="puntuacio">Puntuació</label>
                     {{ form.puntuacio }}
-                    {{ form.puntuacio.errors }}
                 </div>
                 <div class="form-group col-md-4">
                     <label for="qualificacio">Qualificació</label>
@@ -67,5 +72,4 @@
         </form>
 
     </div>
-<br><br><br><br><br>
 {% endblock %}
