--- a/templates/afegir_producte.html
+++ b/templates/afegir_producte.html
@@ -1,3 +1,10 @@
+<!--
+    Pàgina per afegir un nou producte a la base de dades. Només habilitada per l'administrador
+-->
+
+<!--
+    Extén del html base
+-->
 {% extends 'base.html' %}
 {% load static %}
 
@@ -7,34 +14,31 @@
 
 {% block content %}
     <div class="global-container">
-        <div class="card login-form">
-            <div class="card-body">
-                <h3 class="card-title text-center">Afegeix un producte</h3>
-                {% for message in messages %}
-                    <div class="alert alert-{{ message.tags }}" role="alert">
-                        {{ message }}
-                    </div>
-                {% endfor %}
-                <div class="card-text">
-                    <form method="POST" action="" enctype="multipart/form-data">
-                        {% csrf_token %}
-                        <div class="form-group">
-                            <label for="nom">Nom</label>
-                            {{ form.nom }}
-                        </div>
-                        <div class="form-group">
-                            <label for="preu">Preu</label>
-                            {{ form.preu }}
-                        </div>
-                        <div class="form-group">
-                            <label for="imatge">Imatge</label>
-                            {{ form.imatge }}
-                        </div>
-                        <button type="submit" class="btn btn-primary btn-block">Enviar</button>
-                    </form>
+
+        <form method="POST" action="" enctype="multipart/form-data">
+            <h3 class="card-title text-center">Afegeix un producte</h3>
+            {% csrf_token %}
+            {% for message in messages %}
+                <div class="alert alert-{{ message.tags }}" role="alert">
+                    {{ message }}
                 </div>
+            {% endfor %}
+
+            <div class="form-group">
+                <label for="nom">Nom</label>
+                {{ form.nom }}
             </div>
-        </div>
+            <div class="form-group">
+                <label for="preu">Preu</label>
+                {{ form.preu }}
+            </div>
+            <div class="form-group">
+                <label for="imatge">Imatge</label>
+                {{ form.imatge }}
+            </div>
+            <button type="submit" class="btn btn-primary btn-block">Enviar</button>
+        </form>
+
     </div>
 
 {% endblock %}
