--- a/templates/editar_producte.html
+++ b/templates/editar_producte.html
@@ -1,3 +1,11 @@
+<!--
+    Pàgina per editar un producte. Només habilitada per l'administrador
+-->
+<!--
+    Extén del html base
+-->
+
+
 {% extends 'base.html' %}
 {% load static %}
 
@@ -8,36 +16,32 @@
 {% block content %}
 
     <div class="global-container">
-        <div class="card login-form">
-            <div class="card-body">
-                <h3 class="card-title text-center">Modifica un producte</h3>
-                {% for message in messages %}
-                    <div class="alert alert-{{ message.tags }}" role="alert">
-                        {{ message }}
-                    </div>
-                {% endfor %}
-                <div class="card-text">
-                    <form method="POST" action="" enctype="multipart/form-data">
-                        {% csrf_token %}
-                        <div class="form-group">
-                            <label for="nom">Nom</label>
-                            {{ form.nom }}
-                        </div>
-                        <div class="form-group">
-                            <label for="preu">Preu</label>
-                            {{ form.preu }}
-                        </div>
-                        <div class="form-group">
-                            <label for="imatge">Imatge</label>
-                            {{ form.imatge }}
-                        </div>
-                        <button type="submit" class="btn btn-primary btn-block">Modificar</button>
-                    </form>
+        <form method="POST" action="" enctype="multipart/form-data">
+            <h3 class="card-title text-center">Modifica un producte</h3>
+            {% for message in messages %}
+                <div class="alert alert-{{ message.tags }}" role="alert">
+                    {{ message }}
                 </div>
-            </div>
-        </div>
+            {% endfor %}
+
+                {% csrf_token %}
+                <div class="form-group">
+                    <label for="nom">Nom</label>
+                    {{ form.nom }}
+                </div>
+                <div class="form-group">
+                    <label for="preu">Preu</label>
+                    {{ form.preu }}
+                </div>
+                <div class="form-group">
+                    <label for="imatge">Imatge</label>
+                    {{ form.imatge }}
+                </div>
+                <button type="submit" class="btn btn-primary btn-block">Modificar</button>
+        </form>
+
     </div>
-    <br><br><br>
+
 
 {% endblock %}
 
