--- a/templates/index.html
+++ b/templates/index.html
@@ -1,60 +1,45 @@
+<!--
+    Pàgina index amb la cartellera mostrant totes les pel·lícules
+-->
+<!--
+    Extén del html base
+-->
+
 {% extends 'base.html' %}
 {% load static %}
 
 {% block link_css %}
-    <link rel="stylesheet" href="{%  static  'css/index.css'  %}">
+    <link rel="stylesheet" href="{% static 'css/index.css' %}">
 {% endblock %}
 
 {% block content %}
 
-    <!-- Slider -->
-    <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
-        <ol class="carousel-indicators">
-            <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
-            <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
-            <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
-        </ol>
-        <div class="carousel-inner">
-            <div class="carousel-item active">
-                <img class="d-block w-100" src="{%  static  'img/banners/croods2.jpg'  %}" alt="First slide">
-            </div>
-            <div class="carousel-item">
-                <img class="d-block w-100" src="{%  static  'img/banners/ww84_banner.jpg'  %}" alt="Second slide">
-            </div>
-            <div class="carousel-item">
-                <img class="d-block w-100" src="{%  static  'img/banners/aves_de_presa_banner.jpg'  %}" alt="Third slide">
-            </div>
-        </div>
-        <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
-            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-            <span class="sr-only">Previous</span>
-        </a>
-        <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
-            <span class="carousel-control-next-icon" aria-hidden="true"></span>
-            <span class="sr-only">Next</span>
-        </a>
-    </div>
-    <br><br>
+    <h2 class="center">Cartellera</h2> <br>
+
+    {#    fem un for per mostrar les pel·lícules que hi ha a la base de dades#}
     <div class="container">
+        <select id="selectGeneres" class="form-control form-control-sm">
+            {% for genere in generes %}
+                <option value="{{ genere.id_genere }}">
+                    {{ genere.nom }}
+                </option>
+            {% endfor %}
+        </select><br>
         <div class="row">
-            <div class="col-md-6">
-                <div class="card">
-                    <img src="{%  static  'img/images/popcorn.png'  %}">
-                    <div class="card-body">
-                        <h5 class="card-title">Les millors!</h5>
-                        <p>Ens enorgulleix comptar amb les segones MILLORS CRISPETES de Catalunya!</p>
-                    </div>
+            {% for peli in pelicules %}
+                <div class="col-md-3 col-sm-6 mb-3">
+                    <a href="{% url 'info_pelicula' peli.id_pelicula %}" class="custom-card">
+                        <div class="card">
+                            {% if peli.imatge %}
+                                <img src="{{ peli.imatge.url }}" class="card-img-top">
+                                <div class="card-body">
+                                    <h5 class="card-title">{{ peli.titol }}</h5>
+                                </div>
+                            {% endif %}
+                        </div>
+                    </a>
                 </div>
-            </div>
-            <div class="col-md-6">
-                <div class="card">
-                    <img src="images/entrada.png">
-                    <div class="card-body">
-                        <h5 class="card-title">Al millor preu!</h5>
-                        <p>Preus no tan bons com les crispetes! (però d'alguna cosa hem de viure)</p>
-                    </div>
-                </div>
-            </div>
+            {% endfor %}
         </div>
     </div>
 {% endblock %}
