--- a/templates/afegir_pelicula.html
+++ b/templates/afegir_pelicula.html
@@ -11,6 +11,10 @@
     <link rel="stylesheet" href="{% static 'css/login.css' %}">
 {% endblock %}
 
+{% block js %}
+    <script src="{% static 'js/validacions.js' %}"></script>
+{% endblock %}
+
 {% block content %}
     <div class="global-container">
 
