--- a/templates/registrar.html
+++ b/templates/registrar.html
@@ -27,28 +27,27 @@
                         {% endfor %}
                         <div class="form-group">
                             <label for="first_name">Nom</label>
-                            <input type="text" class="form-control form-control-sm" name="first_name">
+                            <input type="text" class="form-control form-control-sm" name="first_name" required>
                         </div>
                         <div class="form-group">
                             <label for="last_name">Cognom</label>
-                            <input type="text" class="form-control form-control-sm" name="last_name">
+                            <input type="text" class="form-control form-control-sm" name="last_name" required>
                         </div>
                         <div class="form-group">
                             <label for="email">Correu electrònic</label>
-                            <input type="email" class="form-control form-control-sm" name="email">
+                            <input type="email" class="form-control form-control-sm" name="email" required>
                         </div>
                         <div class="form-group">
                             <label for="username">Nom d'usuari</label>
-                            <input type="tel" class="form-control form-control-sm" name="username">
+                            <input type="tel" class="form-control form-control-sm" name="username" required>
                         </div>
                         <div class="form-group">
                             <label for="password1">Contrasenya</label>
-                            <input type="password" class="form-control form-control-sm" name="password1"
-                            onchange="form.password.pattern=this.value">
+                            <input type="password" class="form-control form-control-sm" name="password1" required>
                         </div>
                         <div class="form-group">
                             <label for="password">Repeteix la contrasenya</label>
-                            <input type="password" class="form-control form-control-sm" name="password2">
+                            <input type="password" class="form-control form-control-sm" name="password2" required>
                         </div>
                         <button type="submit" class="btn btn-primary btn-block">Registrar</button>
 
