--- a/templates/base.html
+++ b/templates/base.html
@@ -64,7 +64,7 @@
         </div>
 {#      Si l'usuari ha iniciat sessió, mostrem el seu nom d'usuari i l'enllaç per tancar la sessió #}
         {% if request.user.is_authenticated %}
-        <span class="nav-link">Hola, {{ request.user }}</span>
+        <span class="nav-link">Hola, {{ request.user.username }}</span>
         <span><a href="{% url 'logout' %}">Tancar Sessió</a></span>
         {% endif %}
     </nav>
