--- a/templates/editar_producte.html
+++ b/templates/editar_producte.html
@@ -15,9 +15,12 @@
 
 {% block content %}
 
-    <div class="global-container">
+    <div class="global-container-sessio">
         <form method="POST" action="" enctype="multipart/form-data">
             <h3 class="card-title text-center">Modifica un producte</h3>
+
+            {{ form.errors }}
+
             {% for message in messages %}
                 <div class="alert alert-{{ message.tags }}" role="alert">
                     {{ message }}
