--- a/templates/editar_pelicula.html
+++ b/templates/editar_pelicula.html
@@ -12,19 +12,26 @@
     <link rel="stylesheet" href="{% static 'css/login.css' %}">
 {% endblock %}
 
+{% block js %}
+    <script src="{% static 'js/validacions.js' %}"></script>
+{% endblock %}
+
 {% block content %}
 
     <div class="global-container">
+
 
         <form method="POST" action="" enctype="multipart/form-data">
             <h3 class="card-title text-center">Modifica una pel·lícula</h3>
             {% csrf_token %}
 
-            {% for message in messages %}
-                <div class="alert alert-{{ message.tags }}" role="alert">
-                    {{ message }}
-                </div>
-            {% endfor %}
+            {{ form.errors }}
+
+{#            {% for message in messages %}#}
+{#                <div class="alert alert-{{ message.tags }}" role="alert">#}
+{#                    {{ message }}#}
+{#                </div>#}
+{#            {% endfor %}#}
 
             <div class="form-group">
                 <label for="titol">Títol</label>
