--- a/templates/login.html
+++ b/templates/login.html
@@ -27,12 +27,12 @@
                             </div>
                         {% endfor %}
                         <div class="form-group">
-                            <label for="username">Nom d'usuari</label>
-                            <input type="text" class="form-control form-control-sm" name="username" required>
+                            <label for="email">Email</label>
+                            <input type="text" class="form-control form-control-sm" name="email">
                         </div>
                         <div class="form-group">
                             <label for="password">Contrasenya</label>
-                            <input type="password" class="form-control form-control-sm" name="password" required>
+                            <input type="password" class="form-control form-control-sm" name="password">
                         </div>
                         <button type="submit" class="btn btn-primary btn-block">Inicia sessió</button>
 
