--- a/Apps/gestio_cine/static/css/login.css
+++ b/Apps/gestio_cine/static/css/login.css
@@ -62,6 +62,15 @@ html,body {
 	padding: 10px;
 }
 
+.global-container-alert{
+	height:100%;
+	display: flex;
+    align-items: center;
+	justify-content: center;
+	padding: 10px;
+}
+
+
 form {
 	padding-top: 10px;
 	font-size: 14px;
