--- a/templates/password_reset.html
+++ b/templates/password_reset.html
@@ -17,7 +17,7 @@
     <div class="global-container-login">
         <div class="card login-form">
             <div class="card-body">
-                <h3 class="card-title text-center">Inicia sessió</h3>
+                <h3 class="card-title text-center">Recupera la contrasenya</h3>
                 <div class="card-text">
                     <form method="POST" action="">
                         {% csrf_token %}
@@ -28,20 +28,11 @@
                         {% endfor %}
                         <div class="form-group">
                             <label for="email">Email</label>
-                            <input type="text" class="form-control form-control-sm" name="email" value="{{ data.email }}">
+                            <input type="text" class="form-control form-control-sm" name="email">
                         </div>
-                        <div class="form-group">
-                            <label for="password">Contrasenya</label>
-                            <input type="password" class="form-control form-control-sm" name="password">
-                        </div>
-                        <button type="submit" class="btn btn-primary btn-block">Inicia sessió</button>
 
-                        <div class="sign-up">
-                            No tens compte? <a href="/registrar">Crea'n un</a>
-                        </div>
-                        <div class="sign-up">
-                            Has oblidat la contrasenya? <a href="/password_reset">Recupera-la</a>
-                        </div>
+                        <button type="submit" class="btn btn-primary btn-block">Enviar correu</button>
+
                     </form>
                 </div>
             </div>
