--- a/templates/password_reset_confirm.html
+++ b/templates/password_reset_confirm.html
@@ -17,31 +17,29 @@
     <div class="global-container-login">
         <div class="card login-form">
             <div class="card-body">
-                <h3 class="card-title text-center">Inicia sessió</h3>
+                <h3 class="card-title text-center">Canvia la contrasenya</h3>
                 <div class="card-text">
                     <form method="POST" action="">
                         {% csrf_token %}
+                        {{ form.errors }}
                         {% for message in messages %}
                             <div class="alert alert-{{ message.tags }}" role="alert">
                                 {{ message }}
                             </div>
                         {% endfor %}
-                        <div class="form-group">
-                            <label for="email">Email</label>
-                            <input type="text" class="form-control form-control-sm" name="email" value="{{ data.email }}">
-                        </div>
-                        <div class="form-group">
-                            <label for="password">Contrasenya</label>
-                            <input type="password" class="form-control form-control-sm" name="password">
-                        </div>
-                        <button type="submit" class="btn btn-primary btn-block">Inicia sessió</button>
 
-                        <div class="sign-up">
-                            No tens compte? <a href="/registrar">Crea'n un</a>
+                        <div class="form-group">
+                            <label for="id_new_password1">Contrasenya</label>
+                            <input type="password" class="form-control form-control-sm" id="id_new_password1" name="new_password1">
                         </div>
-                        <div class="sign-up">
-                            Has oblidat la contrasenya? <a href="/password_reset">Recupera-la</a>
+                        <div class="form-group">
+                            <label for="id_new_password2">Confirma la contrasenya</label>
+                            <input type="password" class="form-control form-control-sm" id="id_new_password2" name="new_password2">
                         </div>
+
+
+                        <button type="submit" class="btn btn-primary btn-block">Canvia la contrasenya</button>
+
                     </form>
                 </div>
             </div>
